# hotpot

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh_CN.md  issues.md  release-please-config.json
.claude/: settings.json
.claude/agents/: hotpot-execution.md  hotpot-review.md
.claude/commands/hotpot/: execute.md  new.md
.claude/hooks/: hotpot-pre-tool-use.cmd  hotpot-pre-tool-use.sh  hotpot-subagent-start.cmd  hotpot-subagent-start.sh
.claude/skills/: writing-plan.md
.claude/skills/save_issue/: SKILL.md
.claude/skills/save_plan/: SKILL.md
.claude/skills/translator/: SKILL.md
.codex/: config.toml
.codex/agents/: hotpot-execution.toml  hotpot-review.toml
.codex/skills/hotpot-execute/: SKILL.md
.codex/skills/hotpot-finish-work/: SKILL.md
.codex/skills/hotpot-new/: SKILL.md
.github/workflows/: rebuild-release-assets.yml  release-please.yml
.hotpot/: config.toml  issue-candidates.jsonl  issues.jsonl
.hotpot-hub/: pnpm-lock.yaml
.hotpot-hub/docs/.vuepress/: sidebar.js
.hotpot/prompts/: hotpot-execute.md  hotpot-finish-work.md  hotpot-new.md  output-language.md  record-issue-candidate.md  summarize-issue-candidates.md  tdd-protocol.md  vuepress-style.md
.hotpot/workspace/HusuSama/: 2026-05-01-new-and-writing-plan-bootstrap-design.md  2026-05-01-new-and-writing-plan-bootstrap-plan.md
.hotpot/workspaces/HusuSama/: overview.jsonl  overview.toml
.hotpot/workspaces/HusuSama/tasks/: 2025-01-03-test-username-and-password-context.md  2026-05-17-auto-cleanup-test-tempdirs.md  2026-05-17-fix-vuepress-start-detach.md  2026-05-17-polish-vuepress-task-rendering.md  2026-05-18-auto-commit-task-done-record.md  2026-05-18-diagnose-vuepress-start-bash-hang.md  2026-05-18-fix-vuepress-task-url-stem.md  2026-05-18-global-issue-candidates-file.md  2026-05-18-harden-execute-subagent-recovery.md  2026-05-18-unify-vuepress-gate-to-file-check.md  (+24 more)
.hotpot/workspaces/test/: overview.jsonl
.hotpot/workspaces/test_active_multi_guard/: overview.jsonl
.hotpot/workspaces/test_create_clear_stale/: overview.jsonl
.hotpot/workspaces/test_create_default_conflict/: overview.jsonl
.hotpot/workspaces/test_create_default_empty/: overview.jsonl
.hotpot/workspaces/test_create_default_repeat/: overview.jsonl
.hotpot/workspaces/test_create_inactive/: overview.jsonl
.hotpot/workspaces/test_create_inactive_mixed/: overview.jsonl
.hotpot/workspaces/test_create_switch/: overview.jsonl
.opencode/agents/: hotpot-execution.md  hotpot-review.md
.opencode/commands/: finish-work.md
.opencode/commands/hotpot/: execute.md
.opencode/plugins/: bash-before.ts  hotpot-bash-before.ts  review-memory.ts
.pi/: package.json
.pi/extensions/hotpot/: index.ts
.pi/prompts/: hotpot-execute.md  hotpot-finish-work.md  hotpot-new.md
assets/prompts/: get-issue.md  hotpot-execute.md  hotpot-finish-work.md  hotpot-new.md  output-language.md  record-issue-candidate.md  summarize-issue-candidates.md  tdd-protocol.md  vuepress-style.md  vuepress.md
assets/templates/: gitignore.hotpot  hotpot-config.toml
assets/vuepress/: pnpm-lock.yaml
assets/vuepress/docs/: README.md
commands/: new.md
docs/: 2026-05-11-hotpot-issue.md  ARCH.md  ARCH.zh_CN.md  ISSUES.md  ROADMAP.md
docs/issues/: 2026-05-13-hotpot-hook-env-context.md
docs/plans/: 2026-05-13-hotpot-context-unification.md
docs/superpowers/plans/: 2026-05-10-bash-before-username-implementation.md
docs/superpowers/specs/: 2026-05-10-bash-before-username-design.md
hooks/opencode/plugins/: bash-before.ts
npm/: package.json
npm/scripts/: install.js  install.test.js
packaging/chocolatey/: hotpot.nuspec
packaging/chocolatey/tools/: chocolateyInstall.ps1
prompts/: get-issue.md  record-issue-candidate.md  summarize-issue-candidates.md
scripts/: update-release-package-manifests.sh
src/: context.rs  issues.rs  lock.rs  main.rs  paths.rs  server.rs  task.rs  test_support.rs  vuepress.rs  workspace.rs
src/assets/: merge.rs  mod.rs  shared.rs  vuepress_hub.rs  vuepress_opt_in.rs
src/commands/: hook.rs  init.rs  issues.rs  mod.rs  server.rs  task.rs  update.rs  vuepress.rs  worktree.rs
src/commands/init/: claude.rs  codex.rs  merge.rs  mod.rs  opencode.rs  pi.rs
src/task/: create.rs  markdown.rs  mod.rs  storage.rs  transitions.rs
src/utils/: base.rs  mod.rs  task.rs
src/vuepress/: mod.rs
src/vuepress/template/: package.json
src/worktree/: mod.rs
(+4 files in other folders)
