[package]
name = "hotpot"
version = "0.3.1"
edition = "2024"
license = "MIT"
authors = []
repository = "https://github.com/fancyhq/hotpot"

[dependencies]
anyhow = "1.0.102"
indoc = "2.0.7"
nanoid = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
toml_edit = "0.25.11"
chrono = { version = "0.4.44", default-features = false, features = [
    "clock",
    "serde",
] }
clap = { version = "4.6.1", features = ["derive"] }
tiny_http = "0.12.0"
fs2 = "0.4"
dunce = "1.0"


[dev-dependencies]
tempfile = "3"


[target.'cfg(windows)'.dependencies]
junction = "2.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
